--- a/Front-end/login.html
+++ b/Front-end/login.html
@@ -6,26 +6,10 @@
     <title>Book25</title>
     <link rel="stylesheet" href="StyleSheets/style.css">
 </head>
+<body id="loginBody">
 
-<body id="indexBody">
-
-    <!--Fejléc-->
     <div class="topbar">
         <div class="logo"><a href="index.html">BOOK<span>25</span>.hu</a></div>
-        <div class="login"><a href="login.html">Bejelentkezés</a></div>
     </div>
-
-    <!--Menü-->
-    <div class="navbar">
-        <a href="index.html">Főoldal</a>
-        <a href="#">Könyvek</a>
-        <a href="#">Kiadók</a>
-        <a href="#">Áruházak</a>
-        <a href="#">Statisztikák</a>
-    </div>
-
-
-
-
 </body>
 </html>
