--- a/Front-end/register2.0.html
+++ b/Front-end/register2.0.html
@@ -45,6 +45,10 @@
                         <input type="text" name="LAKCIM" id="" placeholder="Lakcím">
                     </div>
                 </div>
+                <div class="button-field">
+                    <button type="button">Regisztráció</button>
+                    <button type="button">Bejelentkezés</button>
+                </div>
             </form>
         </div>
     </div>
