--- a/Front-end/login.html
+++ b/Front-end/login.html
@@ -8,8 +8,43 @@
 </head>
 <body id="loginBody">
 
-    <div class="topbar">
-        <div class="logo"><a href="index.html">BOOK<span>25</span>.hu</a></div>
+    <div class="container">
+        <div class="form-box">
+            <h1>Bejelentkezés</h1>
+            <form id="login-form">
+                <div class="input-group">
+                    <div class="input-field">
+                        <i class="fa-solid fa-envelope"></i>
+                        <input type="email" name="EMAIL" id="EMAIL" placeholder="E-mail cím">
+                    </div>
+                    <div class="input-field">
+                        <i class="fa-solid fa-lock"></i>
+                        <input type="password" name="JELSZO" id="JELSZO" placeholder="Jelszó">
+                    </div>
+                </div>
+                <div class="button-field">
+                    <button type="submit">Bejelentkezés</button>
+                    <button type="button" onclick="window.location.href='register2.0.html'">Regisztráció</button>
+                </div>
+            </form>
+        </div>
     </div>
+
+
+<script>
+    document.getElementById("login-form").addEventListener("submit", function(event){
+        const email = document.getElementById("EMAIL").value.trim();
+        const jelszo = document.getElementById("JELSZO").value.trim();
+
+        if(!email || !jelszo){
+            alert("Kérem, töltson ki minden mezőt!");
+            event.preventDefault();
+        }
+
+    });
+</script>
+
+    
+
 </body>
 </html>
