admin aruhaz felvitele

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -24,8 +24,7 @@
         <a href="#">Statisztikák</a>
     </div>
 
-
-
+    <h2><a href="admin.html">Admin adatkezelés</a></h2>
 
 </body>
 </html>
