--- a/Front-end/login.html
+++ b/Front-end/login.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="form-box">
             <h1>Bejelentkezés</h1>
-            <form id="login-form">
+            <form method="post" id="login-form">
                 <div class="input-group">
                     <div class="input-field">
                         <i class="fa-solid fa-envelope"></i>
@@ -43,8 +43,6 @@
 
     });
 </script>
-
-    
 
 </body>
 </html>
