Admin mufaj es almufaj bevitele

--- a/Front-end/register2.0.html
+++ b/Front-end/register2.0.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-phone"></i>
-                        <input type="number" name="TELEFON" id="TELEFON" placeholder="Telefonszám">     <!-- type = "tel" csak telefonon mukődik, pc-nem ezért number-->
+                        <input type="tel" name="TELEFON" id="TELEFON" placeholder="Telefonszám">
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-location-dot"></i>
