--- a/Front-end/admin.html
+++ b/Front-end/admin.html
@@ -13,12 +13,44 @@
         <div class="logo"><a href="index.html">BOOK<span>25</span>.hu</a></div>
     </div>
 
-        <div class="form-box">
+    <div class="admin-container">
+
+                                                 <!-- Áruház hozzáadása -->
+
+        <div class="admin-form-box">
             <h1>Áruház hozzáadása</h1>
 
             <form method="post" id="shop-register-form">
 
-                <div class="input-group">
+                <div class="admin-input-group">
+                    <div class="input-field" >
+                        <i class="fa-solid fa-user"></i>
+                        <input type="text" name="CIM" id="CIM" placeholder="Cím">
+                    </div>
+                    <div class="input-field">
+                        <i class="fa-solid fa-envelope"></i>
+                        <input type="email" name="EMAIL" id="EMAIL" placeholder="E-mail cím">
+                    </div>
+                    <div class="input-field">
+                        <i class="fa-solid fa-user"></i>
+                        <input type="tel" name="TELEFON" id="TELEFON" placeholder="Telefonszám">
+                    </div>
+
+                </div>
+                <div class="admin-button-field">
+                    <button type="submit">Hozzáadás</button>
+                </div>
+            </form>
+        </div>
+
+                                                 <!-- Műfaj hozzáadása -->
+
+        <div class="admin-form-box">
+            <h1>Műfaj hozzáadása</h1>
+
+            <form method="post" id="shop-register-form">
+
+                <div class="admin-input-group">
                     <div class="input-field" >
                         <i class="fa-solid fa-user"></i>
                         <input type="text" name="CIM" id="CIM" placeholder="Cím">
@@ -32,13 +64,43 @@
                         <input type="number" name="TELEFON" id="TELEFON" placeholder="Telefonszám">
                     </div>
      
-
                 </div>
                 <div class="admin-button-field">
                     <button type="submit">Hozzáadás</button>
                 </div>
             </form>
         </div>
+
+                                                 <!-- Alműfaj hozzáadása -->
+
+        <div class="admin-form-box">
+            <h1>Alműfaj hozzáadása</h1>
+
+            <form method="post" id="shop-register-form">
+
+                <div class="admin-input-group">
+                    <div class="input-field" >
+                        <i class="fa-solid fa-user"></i>
+                        <input type="text" name="CIM" id="CIM" placeholder="Cím">
+                    </div>
+                    <div class="input-field">
+                        <i class="fa-solid fa-envelope"></i>
+                        <input type="email" name="EMAIL" id="EMAIL" placeholder="E-mail cím">
+                    </div>
+                    <div class="input-field">
+                        <i class="fa-solid fa-user"></i>
+                        <input type="number" name="TELEFON" id="TELEFON" placeholder="Telefonszám">
+                    </div>
+     
+                </div>
+                <div class="admin-button-field">
+                    <button type="submit">Hozzáadás</button>
+                </div>
+            </form>
+        </div>
+    </div>
+            <!-- Form-ok vége -->
+
 
 
 
