--- a/Front-end/admin.html
+++ b/Front-end/admin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book25</title>
     <link rel="stylesheet" href="StyleSheets/style.css">
+    <script src="https://kit.fontawesome.com/0b5692342b.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="adminBody">
@@ -24,7 +25,7 @@
 
                 <div class="admin-input-group">
                     <div class="input-field" >
-                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-solid fa-location-dot"></i>
                         <input type="text" name="CIM" id="CIM" placeholder="Cím">
                     </div>
                     <div class="input-field">
@@ -32,8 +33,8 @@
                         <input type="email" name="EMAIL" id="EMAIL" placeholder="E-mail cím">
                     </div>
                     <div class="input-field">
-                        <i class="fa-solid fa-user"></i>
-                        <input type="tel" name="TELEFON" id="TELEFON" placeholder="Telefonszám">
+                        <i class="fa-solid fa-phone"></i>
+                        <input type="tel" name="TELEFON" id="TELEFON" placeholder="Telefonszám" pattern="^06\d{2}\d{3}\d{4}$">
                     </div>
 
                 </div>
@@ -48,22 +49,13 @@
         <div class="admin-form-box">
             <h1>Műfaj hozzáadása</h1>
 
-            <form method="post" id="shop-register-form">
+            <form method="post" id="genre-register-form">
 
                 <div class="admin-input-group">
                     <div class="input-field" >
-                        <i class="fa-solid fa-user"></i>
-                        <input type="text" name="CIM" id="CIM" placeholder="Cím">
+                        <i class="fa-solid fa-font"></i>
+                        <input type="text" name="MUFAJ_NEV" id="MUFAJ_NEV" placeholder="Műfaj név">
                     </div>
-                    <div class="input-field">
-                        <i class="fa-solid fa-envelope"></i>
-                        <input type="email" name="EMAIL" id="EMAIL" placeholder="E-mail cím">
-                    </div>
-                    <div class="input-field">
-                        <i class="fa-solid fa-user"></i>
-                        <input type="number" name="TELEFON" id="TELEFON" placeholder="Telefonszám">
-                    </div>
-     
                 </div>
                 <div class="admin-button-field">
                     <button type="submit">Hozzáadás</button>
@@ -76,22 +68,13 @@
         <div class="admin-form-box">
             <h1>Alműfaj hozzáadása</h1>
 
-            <form method="post" id="shop-register-form">
+            <form method="post" id="subgenre-register-form">
 
                 <div class="admin-input-group">
                     <div class="input-field" >
-                        <i class="fa-solid fa-user"></i>
-                        <input type="text" name="CIM" id="CIM" placeholder="Cím">
+                        <i class="fa-solid fa-font"></i>
+                        <input type="text" name="ALMUFAJ_NEV" id="ALMUFAJ_NEV" placeholder="Alműfaj név">
                     </div>
-                    <div class="input-field">
-                        <i class="fa-solid fa-envelope"></i>
-                        <input type="email" name="EMAIL" id="EMAIL" placeholder="E-mail cím">
-                    </div>
-                    <div class="input-field">
-                        <i class="fa-solid fa-user"></i>
-                        <input type="number" name="TELEFON" id="TELEFON" placeholder="Telefonszám">
-                    </div>
-     
                 </div>
                 <div class="admin-button-field">
                     <button type="submit">Hozzáadás</button>
@@ -112,6 +95,26 @@
         const telefon = document.getElementById("TELEFON").value.trim();
 
         if(!cim || !email || !telefon){
+            alert("Kérem, töltson ki minden mezőt!");
+            event.preventDefault();
+        }
+
+    });
+
+    document.getElementById("genre-register-form").addEventListener("submit", function(event){
+        const mufajNev = document.getElementById("MUFAJ_NEV").value.trim();
+
+        if(!mufajNev){
+            alert("Kérem, töltson ki minden mezőt!");
+            event.preventDefault();
+        }
+
+    });
+
+    document.getElementById("subgenre-register-form").addEventListener("submit", function(event){
+        const almufajNev = document.getElementById("ALMUFAJ_NEV").value.trim();
+
+        if(!almufajNev){
             alert("Kérem, töltson ki minden mezőt!");
             event.preventDefault();
         }
