--- a/Front-end/login.html
+++ b/Front-end/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book25</title>
     <link rel="stylesheet" href="StyleSheets/style.css">
+    <script src="https://kit.fontawesome.com/0b5692342b.js" crossorigin="anonymous"></script>
 </head>
 <body id="loginBody">
 
