--- a/Front-end/register2.0.html
+++ b/Front-end/register2.0.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-phone"></i>
-                        <input type="tel" name="TELEFON" id="TELEFON" placeholder="Telefonszám">
+                        <input type="tel" name="TELEFON" id="TELEFON" placeholder="Telefonszám" pattern="^06\d{2}\d{3}\d{4}$">
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-location-dot"></i>
@@ -55,7 +55,6 @@
             </form>
         </div>
     </div>
-
 
 
 <script>
