Konyv felvitel form

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -25,6 +25,8 @@
     </div>
 
     <h2><a href="admin.html">Admin adatkezelés</a></h2>
+    <h2><a href="bookregister.html">Könyvek hozzáadása</a></h2>
+
 
 </body>
 </html>
