input mezok modositasa

--- a/Front-end/admin.html
+++ b/Front-end/admin.html
@@ -37,6 +37,11 @@
                         <input type="tel" name="TELEFON" id="TELEFON" placeholder="Telefonszám" pattern="^06\d{2}\d{3}\d{4}$">
                     </div>
 
+                    <div class="input-field">
+                        <i class="fa-solid fa-user"></i>
+                        <input type="text" name="VEZETO" id="VEZETO" placeholder="Áruház vezető">
+                    </div>
+
                 </div>
                 <div class="admin-button-field">
                     <button type="submit">Hozzáadás</button>
@@ -93,8 +98,9 @@
         const cim = document.getElementById("CIM").value.trim();
         const email = document.getElementById("EMAIL").value.trim();
         const telefon = document.getElementById("TELEFON").value.trim();
+        const vezeto = document.getElementById("VEZETO").value.trim();
 
-        if(!cim || !email || !telefon){
+        if(!cim || !email || !telefon || !vezeto){
             alert("Kérem, töltson ki minden mezőt!");
             event.preventDefault();
         }
