Bejelentkezés, regisztráció, kijelentkezés

--- a/Front-end/login.html
+++ b/Front-end/login.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="form-box">
             <h1>Bejelentkezés</h1>
-            <form method="post" id="login-form">
+            <form method="post" id="login-form" action="../Back-end/authentication/login.php">
                 <div class="input-group">
                     <div class="input-field">
                         <i class="fa-solid fa-envelope"></i>
