--- a/Front-end/bookregister.html
+++ b/Front-end/bookregister.html
@@ -16,7 +16,7 @@
 
     <div class="admin-container">
 
-                                                 <!-- Áruház hozzáadása -->
+                                                 <!-- Könyv hozzáadása -->
 
         <div class="admin-form-box">
             <h1>Könyv hozzáadása</h1>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="admin-form-box">
-            <h1>Műfaj hozzáadása</h1>
+            <h1>Kiadó hozzáadása</h1>
 
             <form method="post" id="publisher-register-form">
 
