Áruház hozzáadása elméletileg működik

--- a/Front-end/admin.html
+++ b/Front-end/admin.html
@@ -21,7 +21,7 @@
         <div class="admin-form-box">
             <h1>Áruház hozzáadása</h1>
 
-            <form method="post" id="shop-register-form">
+            <form method="post" id="shop-register-form" action="../Back-End/shop-register.php">
 
                 <div class="admin-input-group">
                     <div class="input-field" >
