--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <h2><a href="admin.html">Admin adatkezelés</a></h2>
-    <h2><a href="bookregister.html">Könyvek hozzáadása</a></h2>
+    <h2><a href="bookregister.php">Könyvek hozzáadása</a></h2>
 
 
 </body>
