alműfaj hozzáadása működik

--- a/Front-end/admin.html
+++ b/Front-end/admin.html
@@ -73,7 +73,7 @@
         <div class="admin-form-box">
             <h1>Alműfaj hozzáadása</h1>
 
-            <form method="post" id="subgenre-register-form">
+            <form method="post" id="subgenre-register-form" action="../Back-End/shop-genre/subgenre-add.php">
 
                 <div class="admin-input-group">
                     <div class="input-field" >
