update_delete sok munka

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -29,7 +29,7 @@
         <a href="#">Statisztikák</a>
     </div>
 
-    <h2><a href="admin.html">Admin adatkezelés</a></h2>
+    <h2><a href="admin.php">Admin adatkezelés</a></h2>
     <h2><a href="bookregister.php">Könyvek hozzáadása</a></h2>
     <!-- TODO: ezt az elemet át kell tenni a fejlécbe -->
     <h2><a href="../Back-end/authentication/logout.php">Kijelentkezés</a></h2>
