--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -28,9 +28,9 @@
         <a href="#">Áruházak</a>
         <a href="#">Statisztikák</a>
     </div>
-
-    <h2><a href="admin.php">Admin adatkezelés</a></h2>
-    <h2><a href="bookregister.php">Könyvek hozzáadása</a></h2>
+    <h1>Admin Funkciók:</h1>
+    <h2><a href="admin.php">Műfajok + áruházak kezelése</a></h2>
+    <h2><a href="bookregister.php">Könyvek + kiadók kezelése</a></h2>
     <!-- TODO: ezt az elemet át kell tenni a fejlécbe -->
     <h2><a href="../Back-end/authentication/logout.php">Kijelentkezés</a></h2>
 
